add:header to css and html files

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <section class="container">
-      <div class="head"></div>
+  <body class="debug">
+    <section class="container head-background">
+      <div class="head">
+        <div class="header first">logo</div>
+        <div class="header center">link link link link</div>
+        <div class="header last">login</div>
+      </div>
       <div></div>
     </section>
   </body>
