add: hero section to css and html files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <div class="header center">link link link link</div>
         <div class="header last">login</div>
       </div>
-      <div></div>
+    </section>
+    <section class="container hero-bg">
+      <div class="hero">
+        <div class="h-main"></div>
+      </div>
     </section>
   </body>
 </html>
