--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body class="debug">
     <section class="container head-background">
       <div class="head">
@@ -19,5 +20,17 @@
         <div class="h-main"></div>
       </div>
     </section>
+
+    <main class="container">
+      <div class="first-bg">
+        <div class="rectangle">
+          <div class="blue"></div>
+          <div class="pink"></div>
+        </div>
+      </div>
+      <div class="second-bg"></div>
+      <div class="first-bg"></div>
+      <div></div>
+    </main>
   </body>
 </html>
