add: added two more boxes to main

--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
           <div class="pink"></div>
         </div>
       </div>
-      <div class="second-bg"></div>
-      <div class="first-bg"></div>
+
+      <div class="second-bg">
+        <div class="rectangle">
+          <div class="pink"></div>
+          <div class="blue"></div>
+        </div>
+      </div>
+
+      <div class="first-bg">
+        <div class="rectangle">
+          <div class="blue"></div>
+          <div class="pink"></div>
+        </div>
+      </div>
       <div></div>
     </main>
   </body>
