--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="header last">login</div>
       </div>
     </section>
+
     <section class="container hero-bg">
       <div class="hero">
         <div class="h-main"></div>
@@ -42,7 +43,10 @@
           <div class="pink"></div>
         </div>
       </div>
-      <div></div>
+
+      <div class="third-bg">
+        <div class="rectangle green"></div>
+      </div>
     </main>
   </body>
 </html>
