add: first part of footer

--- a/index.html
+++ b/index.html
@@ -48,5 +48,11 @@
         <div class="rectangle green"></div>
       </div>
     </main>
+
+    <footer class="container">
+      <div class="rectangle"></div>
+
+      <div class="last"></div>
+    </footer>
   </body>
 </html>
