add: button and logo to footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     <footer class="container">
       <div class="rectangle"></div>
 
-      <div class="last"></div>
+      <div class="last">
+        <div class="feet">Logo</div>
+        <div><button class="button">Bottone</button></div>
+      </div>
     </footer>
   </body>
 </html>
