--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
     </main>
 
     <footer class="container">
-      <div class="rectangle"></div>
+      <div class="rectangle">
+        <div class="medium"></div>
+        <div class="small"></div>
+        <div class="small"></div>
+        <div class="small"></div>
+        <div class="small"></div>
+      </div>
 
       <div class="last">
         <div class="feet">Logo</div>
